fix alignment of footer and landing page

--- a/src/components/Common/Footer/Footer.css
+++ b/src/components/Common/Footer/Footer.css
@@ -7,7 +7,6 @@
   position: sticky;
   width: 100%;
   height: 10vh;
-  height: 10vh;
   top: calc(100vh - 10vh);
 }
 
